# fplr

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
src/: api.rs  commands.rs  main.rs  models.rs
