[package]
name = "fplr"
version = "0.3.0"
edition = "2024"
authors = ["saki"]
description = "CLI for Fantasy Premier League"
license = "MIT"
repository = "https://github.com/sakihet/fplr"
keywords = ["fpl"]

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
